# tomato-disease-detection-api

./: .gitattributes  .gitignore  Dockerfile  convert2tflite.py  main.py  pyproject.toml  requirements.txt
models/cnn/: cnn_best.keras  cnn_final.keras  confusion_matrix.csv  history.csv  metrics.json  predictions.csv
models/efficientnetb0/: confusion_matrix.csv  efficientnetb0_final.keras  history.csv  metrics.json  mobilenetv2_best.keras  predictions.csv
models/mobilenetv2/: confusion_matrix.csv  history.csv  metrics.json  mobilenetv2_best.keras  mobilenetv2_final.keras  predictions.csv
notebook/: CNN.ipynb  EfficientNetB0.ipynb  MobileNetV2.ipynb
